--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     Tembakau berkualitas, tanpa bikin kantongan habis!
   </p>
 
-  <img src="img/pilihanRoko.png" alt="varian rasa" class="gambar-goyang" id="gambarGoyang" />
+  <img src="pilihanRoko.png" alt="varian rasa" class="gambar-goyang" id="gambarGoyang" />
 <div class="varian">
   <h2>Varian Terlaris</h2>
  <div class="varian-list">
