--- a/Galeri.html
+++ b/Galeri.html
@@ -115,7 +115,7 @@
 <body>
 
   <div class="navbar">
-    <a href="beranda.html" class="nav-link">Beranda</a>
+    <a href="index.html" class="nav-link">Beranda</a>
     <a href="galeri.html" class="nav-link active">Galeri</a>
     <a href="media.html" class="nav-link">Media</a>
     <a href="produk.html" class="nav-link">Produk</a>
