--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 <body>
 
   <div class="navbar">
-    <a href="beranda.html" class="nav-link active">Beranda</a>
+    <a href="index.html" class="nav-link active">Beranda</a>
     <a href="galeri.html" class="nav-link">Galeri</a>
     <a href="media.html" class="nav-link">Media</a>
     <a href="produk.html" class="nav-link">Produk</a>
@@ -237,7 +237,7 @@
   <h2>Varian Terlaris</h2>
  <div class="varian-list">
   <p>Jarum Super</p>
-  <p>Samdu</p>
+  <p>JI Samsu</p>
   <p>Surya</p>
   <p>Tembako Impor</p>
 </div>
