--- a/media.html
+++ b/media.html
@@ -84,7 +84,7 @@
 <body>
 
   <div class="navbar">
-    <a href="beranda.html" class="nav-link">Beranda</a>
+    <a href="index.html" class="nav-link">Beranda</a>
     <a href="galeri.html" class="nav-link">Galeri</a>
     <a href="media.html" class="nav-link active">Media</a>
     <a href="produk.html" class="nav-link">Produk</a>
