--- a/produk.html
+++ b/produk.html
@@ -162,7 +162,7 @@ h3 {
   
     <!-- NAVBAR -->
   <div class="navbar">
-    <a href="beranda.html" class="nav-link ">Beranda</a>
+    <a href="index.html" class="nav-link ">Beranda</a>
    <a href="Galeri.html" class="nav-link">Galeri</a>
     <a href="media.html" class="nav-link">Media</a>
      <a href="produk.html" class="nav-link active">Produk
