--- a/kontak.html
+++ b/kontak.html
@@ -123,7 +123,7 @@
     <h1>Kontak Jaya Mbako</h1>
 
     <div class="kontak-item">
-      <img src="whatsApp.png" alt="WhatsApp">
+      <img src="whatsapp.png" alt="WhatsApp">
       <a href="https://wa.me/6285283907654?text=Halo%20Mas%20Hasbu%2C%20aku%20mau%20beli%20tembako" target="_blank">
         WhatsApp: 0852-8390-7654
       </a>
