--- a/produk.html
+++ b/produk.html
@@ -184,8 +184,8 @@ h3 {
       <a href="#modal1" aria-label="Lihat detail Produk 1">
         <img src="gambar1.jpg" alt="Produk 1" />
         <div class="nama-produk">Produk 1</div>
-        <div class="harga">Rp 100.000</div>
-        <div class="deskripsi">Kualitas premium, bahan katun nyaman.</div>
+        <div class="harga">Rp 10.000</div>
+        <div class="deskripsi">Kualitas bagus, bahan tidak kasar nyaman tidak bahu gembel.</div>
       </a>
     </div>
 
@@ -198,7 +198,7 @@ h3 {
       <a href="#modal2" aria-label="Lihat detail Produk 2">
         <img src="gambar2.jpg" alt="Produk 2" />
         <div class="nama-produk">Produk 2</div>
-        <div class="harga">Rp 85.000 (Diskon Spesial)</div>
+        <div class="harga">Rp 10.000 (Diskon Spesial)</div>
         <div class="deskripsi">Stok terbatas, segera miliki sekarang!</div>
       </a>
     </div>
@@ -212,8 +212,9 @@ h3 {
       <a href="#modal3" aria-label="Lihat detail Produk 3">
         <img src="gambar3.jpg" alt="Produk 3" />
         <div class="nama-produk">Produk 3</div>
-        <div class="harga">Rp 120.000</div>
-        <div class="deskripsi">Handmade dengan bahan terbaik.</div>
+        <div class="harga">Rp 10.000</div>
+        <div class="deskripsi">Pilihan tepat untuk hadiah spesial bagi ayah Anda.
+          </div>
       </a>
     </div>
 
@@ -226,8 +227,9 @@ h3 {
       <a href="#modal4" aria-label="Lihat detail Produk 4">
         <img src="gambar4.jpg" alt="Produk 4" />
         <div class="nama-produk">Produk 4</div>
-        <div class="harga">Rp 75.000</div>
-        <div class="deskripsi">Desain elegan dan nyaman dipakai.</div>
+        <div class="harga">Rp 10.000</div>
+        <div class="deskripsi">Pilihan tepat untuk hadiah spesial bagi ayah Anda.
+</div>
       </a>
     </div>
 
@@ -240,7 +242,7 @@ h3 {
       <a href="#modal5" aria-label="Lihat detail Produk 5">
         <img src="gambar5.jpg" alt="Produk 5" />
         <div class="nama-produk">Produk 5</div>
-        <div class="harga">Rp 150.000</div>
+        <div class="harga">Rp 10.000</div>
         <div class="deskripsi">Material tahan lama dan berkualitas tinggi.</div>
       </a>
     </div>
@@ -254,8 +256,8 @@ h3 {
       <a href="#modal6" aria-label="Lihat detail Produk 6">
         <img src="gambar6.jpg" alt="Produk 6" />
         <div class="nama-produk">Produk 6</div>
-        <div class="harga">Rp 95.000</div>
-        <div class="deskripsi">Warna cerah, cocok untuk segala usia.</div>
+        <div class="harga">Rp 10.000</div>
+        <div class="deskripsi">rasa enteng, cocok untuk segala usia.</div>
       </a>
     </div>
 
@@ -268,8 +270,8 @@ h3 {
       <a href="#modal7" aria-label="Lihat detail Produk 7">
         <img src="gambar7.jpg" alt="Produk 7" />
         <div class="nama-produk">Produk 7</div>
-        <div class="harga">Rp 110.000</div>
-        <div class="deskripsi">Cocok untuk hadiah spesial.</div>
+        <div class="harga">Rp 10.000</div>
+        <div class="deskripsi">Pilihan tepat untuk hadiah spesial bagi ayah Anda.</div>
       </a>
     </div>
 
@@ -282,7 +284,7 @@ h3 {
       <a href="#modal8" aria-label="Lihat detail Produk 8">
         <img src="gambar8.jpg" alt="Produk 8" />
         <div class="nama-produk">Produk 8</div>
-        <div class="harga">Rp 130.000</div>
+        <div class="harga">Rp 10.000</div>
         <div class="deskripsi">Desain modern dan unik.</div>
       </a>
     </div>
@@ -296,7 +298,7 @@ h3 {
       <a href="#modal9" aria-label="Lihat detail Produk 9">
         <img src="gambar9.jpg" alt="Produk 9" />
         <div class="nama-produk">Produk 9</div>
-        <div class="harga">Rp 70.000</div>
+        <div class="harga">Rp 10.000</div>
         <div class="deskripsi">Nyaman dan ramah lingkungan.</div>
       </a>
     </div>
@@ -310,8 +312,9 @@ h3 {
       <a href="#modal10" aria-label="Lihat detail Produk 10">
         <img src="gambar10.jpg" alt="Produk 10" />
         <div class="nama-produk">Produk 10</div>
-        <div class="harga">Rp 160.000</div>
-        <div class="deskripsi">Pilihan tepat untuk kegiatan outdoor.</div>
+        <div class="harga">Rp 10.000</div>
+        <div class="deskripsi">alat giling telah dipilih dan diperiksa oleh Mas Khasbu.
+</div>
       </a>
     </div>
 
@@ -324,8 +327,9 @@ h3 {
       <a href="#modal11" aria-label="Lihat detail Produk 11">
         <img src="gambar11.jpg" alt="Produk 11" />
         <div class="nama-produk">Produk 11</div>
-        <div class="harga">Rp 140.000</div>
-        <div class="deskripsi">Desain klasik, cocok untuk sehari-hari.</div>
+        <div class="harga">Rp 10.000</div>
+        <div class="deskripsi">Tembakau telah dipilih dan diperiksa oleh Mas Khasbu.
+</div>
       </a>
     </div>
 
@@ -338,8 +342,9 @@ h3 {
       <a href="#modal12" aria-label="Lihat detail Produk 12">
         <img src="gambar12.jpg" alt="Produk 12" />
         <div class="nama-produk">Produk 12</div>
-        <div class="harga">Rp 90.000</div>
-        <div class="deskripsi">Bahan lembut dan nyaman dipakai.</div>
+        <div class="harga">Rp 10.000</div>
+        <div class="deskripsi">Tembakau telah dipilih dan diperiksa oleh Mas Khasbu.
+</div>
       </a>
     </div>
 
@@ -352,7 +357,7 @@ h3 {
       <a href="#modal13" aria-label="Lihat detail Produk 13">
         <img src="gambar13.jpg" alt="Produk 13" />
         <div class="nama-produk">Produk 13</div>
-        <div class="harga">Rp 105.000</div>
+        <div class="harga">Rp 10.000</div>
         <div class="deskripsi">Warna netral, cocok untuk segala suasana.</div>
       </a>
     </div>
